# neural-networks-course

./: .gitignore  Mishin_Timofey90.csv  Mishin_Timofey95.csv  Mishin_Timofey98.csv  flake.nix  my_model.ipynb  pyproject.toml  shell.nix
hm1/: Mishin_Timofey.csv  transfer_learning.ipynb  transfer_learning2.ipynb  transfer_learning3.ipynb
hm2/: hm2 copy.ipynb  hm2.ipynb
